automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -150,20 +150,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-6-918b18707b9e>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-918b18707b9e>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    website = \"vandelay.com\" website = \"vandelay.com\"\u001b[0m\n\u001b[0m                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "website = \"vandelay.com\" website = \"vandelay.com\""
+    "website = \"vandelay.com\" \n",
+    "website = \"vandelay.com\""
    ]
   },
   {
