--- a/index.ipynb
+++ b/index.ipynb
@@ -183,14 +183,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "name = 'Art Vandelay'\n",
-    "name = 'Art Bandelaw'"
+    "name = 'Art Vandelay'"
    ]
   },
   {
