--- a/index.ipynb
+++ b/index.ipynb
@@ -580,11 +580,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "42"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "name"
    ]
@@ -605,7 +614,7 @@
    "outputs": [],
    "source": [
     "name = 'Liz Kaplan'\n",
-    "name"
+    "name = 'Liz Ka'"
    ]
   },
   {
