automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -607,14 +607,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [],
    "source": [
     "name = 'Liz Kaplan'\n",
-    "name = 'Liz Ka'"
+    "name = 'Liz Kaplan'"
    ]
   },
   {
